# thermobug

./: .env  .gitignore  Cargo.toml  Dockerfile
compose/: docker-compose.yml
docker/: Dockerfile
docker/compose/: docker-compose.yml
src/: app.rs  lib.rs  main.rs  util.rs
