[package]
name = "thermobug"
version = "0.3.1"
authors = ["Eleanor McMurtry <elem0@protonmail.com>"]
edition = "2018"
license = "GPL-3"

[dependencies]
actix-web = "3"
dotenv = "0.15"
num_cpus = "1"
serde = "1"
mongodb = "1"
# mongodb doesn't re-export this, so this might need updating
# see https://github.com/mongodb/mongo-rust-driver/blob/master/Cargo.toml#L41
futures = "0.3.5"